@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: nfs_prot_sunos5_7.h,v 1.13 2002/12/27 22:44:02 ezk Exp $
+ * $Id: nfs_prot_sunos5_7.h,v 1.14 2003/10/24 14:34:41 ib42 Exp $
  *
  */
 
@@ -103,6 +103,11 @@
 #define	NFSPROC_STATFS ((unsigned long)(17))
 
 #define AUTOFS_CONFTYPE "ticotsord"
+
+/* Sun has incomplete ldap headers, but libraries are ok */
+#ifndef LDAP_VERSION_MAX
+#define LDAP_VERSION_MAX LDAP_VERSION3
+#endif /* LDAP_VERSION_MAX */
 
 
 /*
@@ -211,6 +216,11 @@ extern void *nfsproc_root_2_svc(void *, struct svc_req *);
 extern void *nfsproc_writecache_2(void *, CLIENT *);
 extern void *nfsproc_writecache_2_svc(void *, struct svc_req *);
 extern int nfs_program_2_freeresult(SVCXPRT *, xdrproc_t, caddr_t);
+
+/* Sun has incomplete ldap headers, but libraries are ok */
+#ifdef HAVE_LDAP_H
+extern int ldap_set_option(LDAP *, int, const void *);
+#endif /* HAVE_LDAP_H */
 
 
 /*
