@@ -1,3 +1,13 @@
+2003-10-24  Ion Badulescu  <ion@guppy.limebrokerage.com>
+
+	Compile fix for Solaris7 with LDAP:
+
+	* include/am_defs.h: moved the ldap headers before am_nfs_prot.h
+	to facilitate using ldap types in it
+
+	* conf/nfs_prot/nfs_prot_sunos5_7.h: add a couple of ldap
+	definitions that Sun left out of their headers
+
 2003-10-24  Ion Badulescu  <ionut@moisil.badula.org>
 
 	* conf/nfs_prot/nfs_prot_*.h: remove all NFSv3-related
